Recover TODOs from incremental branch