@@ -1,5 +1,9 @@
 # Todo
 
+## Highlight
+- `(Cast) thing`
+- `Foo.class` 
+
 ## Autocomplete
 - Autocomplete POJO constructor This(T f, U g) { this.f = f; ... }
 
@@ -7,3 +11,9 @@
 - Go-to-subclasses
 - Test coverage codelens
 - Go-to-implementation for overridden methods
+- `Thing#close()` shows 0 references for `try (thing)`
+
+## Bugs 
+- Imports MyEnum.* unnecessarily
+- --add-exports arguments don't get inferred
+- Deleting file doesn't clear it from javac
